--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,7 +28,7 @@ body
 #container
 {
     width: 70%;
-    padding: 0;
+    padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
