--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,14 @@
 body
 {
-    color: #333;
+    color: blue;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
-/* #cabecera
+#cabecera
 {
     background: #33A;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
@@ -23,7 +23,7 @@ body
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
-} */
+} 
 
 #container
 {
@@ -38,7 +38,8 @@ body
 {
     font-size: 20px;
 }
-/* #post
+
+#post
 {
     padding: 1em;
-} */
+} 
